--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -5,6 +5,6 @@
     <title></title>
   </head>
   <body>
-    <h1>Admin Page by Ivas</h1>
+    <h1>Admin Page by Ivas by Ivas</h1>
   </body>
 </html>
