--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,9 +2,32 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Restart.Network Admin</title>
+    <link rel="stylesheet" href="../static/style.css">
   </head>
   <body>
-    <h1>Hi Admin</h1>
+    <div class="user">
+        <header class="user__header">
+            <img src="https://restart.network/images/logo_restart_nav.png" alt="logo" width="150px" />
+            <h1 class="user__title">Restart Network</h1>
+        </header>
+
+        <form class="form">
+
+            <div class="form__group">
+                <input type="email" placeholder="Email" class="form__input" />
+            </div>
+
+            <div class="form__group">
+                <input type="password" placeholder="Password" class="form__input" />
+            </div>
+
+            <button class="btn" type="button">Log in</button>
+        </form>
+    </div>
+
+    <script type="text/javascript" src="js.js">
+
+    </script>
   </body>
 </html>
