Css Style and Static folder

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,14 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Restart.Network Admin</title>
-    <link rel="stylesheet" href="../static/style.css">
+    <title>Restart Network Admin</title>
+    <link href="css/style.css" rel="stylesheet" type="text/css">
+    <script type="text/javascript" src="javascript/js.js"></script>
   </head>
   <body>
     <div class="user">
         <header class="user__header">
             <img src="https://restart.network/images/logo_restart_nav.png" alt="logo" width="150px" />
-            <h1 class="user__title">Restart Network</h1>
         </header>
 
         <form class="form">
@@ -26,8 +26,6 @@
         </form>
     </div>
 
-    <script type="text/javascript" src="js.js">
 
-    </script>
   </body>
 </html>
