--- a/views/bootcamp.ejs
+++ b/views/bootcamp.ejs
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Bootcamp</title>
     <link rel="stylesheet" href="/css/bootcamp.css">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   </head>
   <body>
     <header class="user__header">
@@ -11,21 +12,32 @@
     <div class="container">
       <form id="contact" action="" method="post">
         <h3>Quick Contact</h3>
-        <h4>Contact us today, and get reply with in 24 hours!</h4>
+        <h4>Add or Edit new bootcamp</h4>
+        <div class="dropdown">
+          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Bootcamp Summer 2017
+          </button>
+          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+            <a class="dropdown-item" href="#">Bootcamp Winter 2017</a>
+            <a class="dropdown-item" href="#">Bootcamp Fall 2017</a>
+            <a class="dropdown-item" href="#">Bootcamp Spring 2017</a>
+          </div>
+        </div>
         <fieldset>
           <input placeholder="Bootcamp Name" type="text" tabindex="1" required autofocus>
         </fieldset>
+        <div class='input-group date' id='datetimepicker2'>
         <fieldset>
-          <input placeholder="Your Email Address" type="email" tabindex="2" required>
+          <input placeholder="Starting Date" type="datetime-local" tabindex="2" required>
         </fieldset>
+      </div>
+      <div class='input-group date' id='datetimepicker2'>
+      <fieldset>
+        <input placeholder="Starting Date" type="datetime-local" tabindex="3" required>
+      </fieldset>
+    </div>
         <fieldset>
-          <input placeholder="Your Phone Number" type="tel" tabindex="3" required>
-        </fieldset>
-        <fieldset>
-          <input placeholder="Your Web Site starts with http://" type="url" tabindex="4" required>
-        </fieldset>
-        <fieldset>
-          <textarea placeholder="Type your Message Here...." tabindex="5" required></textarea>
+          <input placeholder="Slack Link" type="url" tabindex="4" required>
         </fieldset>
         <fieldset>
           <button name="submit" type="submit" id="contact-submit" data-submit="...Sending">Submit</button>
@@ -34,5 +46,7 @@
 
 
     </div>
+
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   </body>
 </html>
