--- a/views/edit_students.ejs
+++ b/views/edit_students.ejs
@@ -8,23 +8,21 @@
   </head>
   <body>
     <div class="table-container">
-             <table class="table table-filter">
+             <table class="table table-students">
                <tbody>
-                 <tr class="pagado"> Student Name
-                   <td> Irene
-
-                   </td>
-                 </tr>
-                <tr class="pagado"> Email
-                   <td>
-                      Email
-                   </td>
+                <tr>
+                  <th>Student name</th>
+                  <th>Email</th>
+                  <th>City</th>
+                  <th>Phone</th>
+                  <th>Edit</th>
                 </tr>
-                   <td>
-                      Phone
-                   </td>
-
-                 </tr>
+                <tr>
+                  <td name="st-name">Irene</td>
+                  <td name="st-email">irene@mail.com</td>
+                  <td name="st-city">Rotterdam</td>
+                  <td="st-phone">065434232</td>
+                </tr>
                </tbody>
              </table>
            </div>
