--- a/views/bootcamp.ejs
+++ b/views/bootcamp.ejs
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Bootcamp</title>
-    <link rel="stylesheet" href="/css/bootcamp.css">
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  </head>
+
+<head>
+    <% include ./partials/head %>
+</head>
   <body>
-    <header class="user__header">
-    </header>
+<header>
+    <% include ./partials/header %>
+</header>
+
     <div class="container">
       <form id="contact" action="" method="post">
         <h3>Quick Contact</h3>
@@ -47,6 +47,6 @@
 
     </div>
 
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-  </body>
-</html>
+    <footer>
+      <% include ./partials/footer %>
+    </footer>
