--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Restart Network Admin</title>
-    <link href="css/style.css" rel="stylesheet" type="text/css">
-    <script type="text/javascript" src="javascript/js.js"></script>
-  </head>
+<head>
+    <% include ./partials/head %>
+</head>
   <body>
+<header>
+    <% include ./partials/header %>
+</header>
+
     <div class="user">
         <header class="user__header">
             <img src="https://restart.network/images/logo_restart_nav.png" alt="logo" width="150px" />
@@ -26,6 +27,6 @@
         </form>
     </div>
 
-
-  </body>
-</html>
+  <footer>
+    <% include ./partials/footer %>
+  </footer>
