--- a/public/css/bootcamp.css
+++ b/public/css/bootcamp.css
@@ -34,7 +34,20 @@ body {
 	margin:0 auto;
 	position:relative;
 }
+.btn {
+    display: block;
+    width: 100%;
+    padding: 20px;
+    font-family: $font-family;
+    -webkit-appearance: none;
+    outline: 0;
+    border: 0;
+    color: white;
+    background: #4f4c4a;
+    transition: 0.3s;
 
+}
+.btn:active, .btn:focus { background: rgb(96, 96, 96); }
 #contact input[type="text"], #contact input[type="email"], #contact input[type="tel"], #contact input[type="url"], #contact textarea, #contact button[type="submit"] { font:400 12px/16px "Open Sans", Helvetica, Arial, sans-serif; }
 
 #contact {
