--- a/views/bootcamp.ejs
+++ b/views/bootcamp.ejs
@@ -10,38 +10,33 @@
 </header>
 
     <div class="container">
-      <form id="contact" action="" method="post">
-        <h3>Quick Contact</h3>
-        <h4>Add or Edit new bootcamp</h4>
-        <div class="dropdown">
-          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Bootcamp Summer 2017
-          </button>
-          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-            <a class="dropdown-item" href="#">Bootcamp Winter 2017</a>
-            <a class="dropdown-item" href="#">Bootcamp Fall 2017</a>
-            <a class="dropdown-item" href="#">Bootcamp Spring 2017</a>
+      <form id="contact" class="form">
+        <h4>Register new Bootcamp</h4>
+        <hr />
+          <div class="form__group">
+            <i class="icon-append icon-user">
+              <input type="text" placeholder="Bootcamp Name" class="form__input" />
+              </i>
           </div>
-        </div>
-        <fieldset>
-          <input placeholder="Bootcamp Name" type="text" tabindex="1" required autofocus>
-        </fieldset>
-        <div class='input-group date' id='datetimepicker2'>
-        <fieldset>
-          <input placeholder="Starting Date" type="datetime-local" tabindex="2" required>
-        </fieldset>
-      </div>
+
+          <div class="form__group">
       <div class='input-group date' id='datetimepicker2'>
-      <fieldset>
-        <input placeholder="Starting Date" type="datetime-local" tabindex="3" required>
-      </fieldset>
-    </div>
-        <fieldset>
-          <input placeholder="Slack Link" type="url" tabindex="4" required>
-        </fieldset>
-        <fieldset>
-          <button name="submit" type="submit" id="contact-submit" data-submit="...Sending">Submit</button>
-        </fieldset>
+          <input type='date' class="form__input" />
+          <span class="input-group-addon">
+              <span class="glyphicon glyphicon-calendar"></span>
+          </span>
+      </div>
+  </div>
+
+          <div class="form__group">
+              <input type="date" placeholder="End Date" class="form__input" />
+          </div>
+
+          <div class="form__group">
+              <input type="url" placeholder="Slack Link" class="form__input" />
+          </div>
+
+          <button class="btn" type="button">Submit</button>
       </form>
 
 
