--- a/views/edit_students.ejs
+++ b/views/edit_students.ejs
@@ -21,7 +21,7 @@
                   <td name="st-name">Irene</td>
                   <td name="st-email">irene@mail.com</td>
                   <td name="st-city">Rotterdam</td>
-                  <td="st-phone">065434232</td>
+                  <td name="st-phone">065434232</td>
                 </tr>
                </tbody>
              </table>
