--- a/public/css/bootcamp.css
+++ b/public/css/bootcamp.css
@@ -29,7 +29,7 @@ body {
     height: 100vh
 }
 .container {
-	max-width:400px;
+	/*max-width:400px;*/
 	width:100%;
 	margin:0 auto;
 	position:relative;
