--- a/views/edit_students.ejs
+++ b/views/edit_students.ejs
@@ -4,10 +4,23 @@
     <meta charset="utf-8">
     <title>Edit Students</title>
     <link href="css/style.css" rel="stylesheet" type="text/css">
-    <script type="text/javascript" src="javascript/js.js"></script>
+    <script type="text/javascript" src="javascript/jq.js"></script>
+      <% include ./partials/head %>
   </head>
   <body>
-    <div class="table-container">
+   <header>
+       <% include ./partials/header %>
+   </header>
+   <div class="container">
+
+
+    <div class="table-place">
+      <select id='mySelectElement' value='2' name='mySelectElement'>
+        <% for(var i=0; i< data.length; i++) { %>
+         <option value='1'><%= data[i].bootcamp_name %>  </option>  <% } %>
+
+      </select>
+      <div class="table-container">
              <table class="table table-students">
                <tbody>
                 <tr>
@@ -17,14 +30,19 @@
                   <th>Phone</th>
                   <th>Edit</th>
                 </tr>
+                <% for(var i=0; i< data.length; i++) { %>
                 <tr>
-                  <td name="st-name">Irene</td>
-                  <td name="st-email">irene@mail.com</td>
-                  <td name="st-city">Rotterdam</td>
-                  <td name="st-phone">065434232</td>
+                    <td><%= data[i].stu_name %></td>
+                    <td><%= data[i].email %></td>
+                    <td><%= data[i].city %></td>
+                    <td><%= data[i].phone_num %></td>
+                    <td><a href="#">edit</a></td>
+                  <% } %>
                 </tr>
                </tbody>
              </table>
            </div>
+         </div>
+      </div>
   </body>
 </html>
