--- a/public/css/bootcamp.css
+++ b/public/css/bootcamp.css
@@ -29,8 +29,8 @@ body {
     height: 100vh
 }
 .container {
-	/*max-width:400px;*/
-	width:100%;
+	max-width:400px;
+	/*width:100%;*/
 	margin:0 auto;
 	position:relative;
 }
@@ -134,4 +134,8 @@ fieldset {
 }
 :-ms-input-placeholder {
  color:#888;
+}
+.container-table {
+  max-width: 70%;
+  height: auto;
 }
