--- a/views/edit_students.ejs
+++ b/views/edit_students.ejs
@@ -11,7 +11,7 @@
    <header>
        <% include ./partials/header %>
    </header>
-   <div class="container">
+   <div class="container-table">
 
 
     <div class="table-place">
