--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,8 +1,6 @@
-<meta charset="UTF-8">
-<title>Super Awesome</title>
 
-<!-- CSS -->
-<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-<style>
-	body 	{ padding-top:10px; }
-</style>
+    <meta charset="utf-8">
+    <title></title>
+    <link rel="stylesheet" href="/css/bootcamp.css">
+    <link rel="stylesheet" href="/css/style.css">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
