--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,16 +1,19 @@
+
 <nav class="navbar navbar-default" role="navigation">
-	<div class="container-fluid">
+<div class="container-fluid">
 
-		
+    <div class="navbar-header">
+        <a class="navbar-brand" href="#">
+            <span class="glyphicon glyphicon glyphicon-tree-deciduous"></span>
+        </a>
 
-		<ul class="nav navbar-nav">
-			<li><a href="/">Home</a></li>
-			<li><a href="/about">New bootcamp</a></li>
-			<li><a href="/newstudent">New student</a></li>
-			<li><a href="/about">Edit student</a></li>
-			<li><a href="/about">Reports</a></li>
-			<li><a href="/about">Sign out</a></li>
-		</ul>
-	  
-	</div>
+        <ul class="nav navbar-nav">
+            <li><a href="/">Home</a></li>
+            <li><a href="/about">Bootcamp</a></li>
+            <li><a href="/about">Students</a></li>
+            <li><a href="/about">Report</a></li>
+        </ul>
+    </div>
+
+</div>
 </nav>
