--- a/public/css/bootcamp.css
+++ b/public/css/bootcamp.css
@@ -48,7 +48,27 @@ body {
 
 }
 .btn:active, .btn:focus { background: rgb(96, 96, 96); }
+
+.btn_edit {
+    display: inline-block;
+    width: 40%;
+    padding: 10px;
+    font-family: $font-family;
+    -webkit-appearance: none;
+    margin-right: 20px;
+    margin-top: 30px;
+    outline: 0;
+    border: 0;
+    color: white;
+    background: #4f4c4a;
+    transition: 0.3s;
+
+}
+.btn_edit:active, .btn_edit:focus { background: rgb(193, 40, 40); }
+
+
 #contact input[type="text"], #contact input[type="email"], #contact input[type="tel"], #contact input[type="url"], #contact textarea, #contact button[type="submit"] { font:400 12px/16px "Open Sans", Helvetica, Arial, sans-serif; }
+
 
 #contact {
 	background:#F9F9F9;
