--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,8 +5,14 @@
 </head>
   <body>
 <header>
+
+
+      <% include ./partials/header %>
+
+
   <nav class="navbar navbar-default" role="navigation">
   <div class="container-fluid">
+
 
       <div class="navbar-header">
           <a class="navbar-brand" href="#">
