--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,7 +10,7 @@
         <ul class="nav navbar-nav">
             <li><a href="/">Home</a></li>
             <li><a href="/about">Bootcamp</a></li>
-            <li><a href="/about">Students</a></li>
+            <li><a href="/students">Students</a></li>
             <li><a href="/about">Report</a></li>
         </ul>
     </div>
