--- a/public/css/bootcamp.css
+++ b/public/css/bootcamp.css
@@ -18,7 +18,7 @@
     animation: arrive 500ms ease-in-out 0.7s forwards;
 }
 body {
-<<<<<<< HEAD
+
   font-family:"Open Sans", Helvetica, Arial, sans-serif;
   font-weight:300;
   font-size: 12px;
@@ -38,7 +38,8 @@ body {
 .container_main {
 	max-width:600px;
 	width:100%;
-=======
+  margin:0 auto;
+  position:relative;
     font-family:"Open Sans", Helvetica, Arial, sans-serif;
     font-weight:300;
   	font-size: 12px;
@@ -52,7 +53,7 @@ body {
 .container {
 	max-width:400px;
 	/*width:100%;*/
->>>>>>> Shahriar
+
 	margin:0 auto;
 	position:relative;
 }
@@ -70,10 +71,10 @@ body {
 
 }
 .btn:active, .btn:focus { background: rgb(96, 96, 96); }
-<<<<<<< HEAD
+
 #contact input[type="text"], #contact input[type="email"], #contact input[type="tel"], #contact input[type="url"], #contact textarea, #contact button[type="submit"] { font:400 12px/16px "Open Sans", Helvetica, Arial, sans-serif; }
 
-=======
+
 
 .btn_edit {
     display: inline-block;
@@ -96,7 +97,7 @@ body {
 #contact input[type="text"], #contact input[type="email"], #contact input[type="tel"], #contact input[type="url"], #contact textarea, #contact button[type="submit"] { font:400 12px/16px "Open Sans", Helvetica, Arial, sans-serif; }
 
 
->>>>>>> Shahriar
+
 #contact {
 	background:#F9F9F9;
 	padding:25px;
