--- a/views/edit_bootcamp.ejs
+++ b/views/edit_bootcamp.ejs
@@ -11,7 +11,7 @@
 
     <div class="container">
       <% for(i=0 ; i < data.length ; i++){ %>
-      <form method="post" action="/editbtcmp/edit/<%= data[i].bootcamp_id %>" id="contact" class="form">
+      <form method="post" action="/bootcamp/editbtcmp/<%= data[i].bootcamp_id %>" id="contact" class="form">
         <h4>Edit Bootcamp</h4>
         <hr />
 
