--- a/views/bootcamp.ejs
+++ b/views/bootcamp.ejs
@@ -15,7 +15,7 @@
             Select Bootcamps
           </button>
           <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-            <% for(i=0 ; i < data.length ; i++){ %> <a class="dropdown-item" href="/editbtcmp/<%= data[i].bootcamp_id %>"> <h5 class="drop_btcmp"><%= data[i].bootcamp_name %></h5> <br /> </a> <% } %>
+            <% for(i=0 ; i < data.length ; i++){ %> <a class="dropdown-item" href="/bootcamp/showbtcmp/<%= data[i].bootcamp_id %>"> <h5 class="drop_btcmp"><%= data[i].bootcamp_name %></h5> <br /> </a> <% } %>
           </div>
         </div>
       <form method="POST" action="/bootcamp" id="contact" class="form">
