--- a/views/select_record.ejs
+++ b/views/select_record.ejs
@@ -12,7 +12,7 @@
 
 <!-- code for bootcamp name indication -->
 <% for(i=0 ; i < data.length ; i++){ %>
-      <form method="post" action="/selectrpt/edit/<%= data[i].bootcamp_id %>" id="contact" class="form">
+      <form method="post" action="/selectrpt/<%= data[i].bootcamp_id %>" id="contact" class="form">
         <h3>Report</h3>
         <hr />
 
@@ -32,6 +32,14 @@
               %>
                 <a class="dropdown-item" href="#">
                   <h5 class="drop_btcmp"><%= data[i].bootcamp_students %></h5>
+                  <br />
+                </a>
+              <% } %>
+
+              <% for(i=0 ; i < data_student.length ; i++){
+              %>
+                <a class="dropdown-item" href="#">
+                  <h5 class="drop_btcmp"><%= data_student[i].stu_name %></h5>
                   <br />
                 </a>
               <% } %>
