--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,7 +11,7 @@
             <li><a href="/">Home</a></li>
             <li><a href="/bootcamp">Bootcamp</a></li>
             <li><a href="/students">Students</a></li>
-            <li><a href="/editstud">Edit Students</a></li>
+            <li><a href="/seestuds">View Students</a></li>
             <li><a href="/records">Report</a></li>
         </ul>
     </div>
