--- a/views/seestudents.ejs
+++ b/views/seestudents.ejs
@@ -21,11 +21,12 @@
              <table class="table table-students">
                <tbody>
                 <tr>
-                  <th>Student name</th>
-                  <th>Email</th>
+                  <th>Name</th>
+                  <th>E-mail</th>
                   <th>City</th>
                   <th>Phone</th>
                   <th>Edit</th>
+                  <th>Reports</th>
                 </tr>
                 <% for(var i=0; i< data.length; i++) { %>
                 <tr>
@@ -33,7 +34,8 @@
                     <td><%= data[i].email %></td>
                     <td><%= data[i].city %></td>
                     <td><%= data[i].phone_num %></td>
-                    <td><a href="#">edit</a></td>
+                    <td><a href="/seestuds/edit/<%= data[i].stu_id %>">Edit</a></td>
+                    <td><a href="#Irene URL#">View</a></td>
                   <% } %>
                 </tr>
                </tbody>
