--- a/views/bootcamp.ejs
+++ b/views/bootcamp.ejs
@@ -21,6 +21,7 @@
       <form method="POST" action="/bootcamp" id="contact" class="form">
         <h4>Add New Bootcamp</h4>
         <hr />
+        <%- error('messages', locals) %>
 
           <div class="form__group">
 
