Report=> on work

--- a/views/records.ejs
+++ b/views/records.ejs
@@ -8,7 +8,23 @@
 <header>
     <% include ./partials/header %>
 </header>
+  <div class="header">
+    <button class="btn btn-secondary" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true"  aria-expanded="false">
+      <h3>Report</h3>
+    </button>
+  </div>
+  <div class="student">Name: Student</div>
 
+  <div class="container-table">
+   <div class="table-place">
+     <div class="table-container">
+            <table class="table table-students">
+            
+              </tbody>
+            </table>
+          </div>
+        </div>
+     </div>
 
 <footer>
   <% include ./partials/footer %>
