--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,11 +30,11 @@
         <form class="form" method="POST" action="/login">
 
             <div class="form__group">
-                <input type="email" name="email" placeholder="Email" class="form__input" />
+                <input type="email" name="email" placeholder="Email" class="form__input" required/>
             </div>
-
+            <%- messages('messages', locals) %>
             <div class="form__group">
-                <input type="password" name="password" placeholder="Password" class="form__input" />
+                <input type="password" name="password" placeholder="Password" class="form__input" required/>
             </div>
 
             <button class="btn" type="submit">Log in</button>
