--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,12 +1,16 @@
 
-<nav class="navbar navbar-default" role="navigation">
+<nav class="navbar navbar-inverse bg-inverse" role="navigation">
 <div class="container-fluid">
 
     <div class="navbar-header">
-        <a class="navbar-brand" href="#">
 
-            <span>Welcome <%= user_session %></span>
-        </a>
+
+<a class="dropdown navbar-brand dropdown-toggle" data-toggle="dropdown">Welcome <%= user_session %>
+</a>
+<ul class="dropdown-menu">
+<li><a href="/profile/1">Edit your profile</a></li>
+</ul>
+
 
         <ul class="nav navbar-nav">
             <li><a href="/bootcamp">Bootcamp</a></li>
