--- a/views/seestudents.ejs
+++ b/views/seestudents.ejs
@@ -35,7 +35,7 @@
                     <td><%= data[i].city %></td>
                     <td><%= data[i].phone_num %></td>
                     <td><a href="/seestuds/edit/<%= data[i].stu_id %>">Edit</a></td>
-                    <td><a href="#Irene URL#">View</a></td>
+                    <td><a href="/records/view/<%= data[i].stu_id %>">View</a></td>
                   <% } %>
                 </tr>
                </tbody>
