maybe its time!!!

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,11 +7,10 @@
 
             <span>Welcome <%= user_session %></span>
         </a>
-
         <ul class="nav navbar-nav">
             <li><a href="/bootcamp">Bootcamp</a></li>
             <li><a href="/students">Students</a></li>
-            <li><a href="/seestuds">View Students</a></li>
+            <li><a href="/seestuds">< Select The Bootcamp > </a></li>
             <li><a href="/records">Report</a></li>
             <li class="logout"><a href="/bootcamp/signout">Log out</a></li>
         </ul>
