--- a/public/css/editstud.css
+++ b/public/css/editstud.css
@@ -13,6 +13,33 @@
   margin-right: auto;
   margin-left: auto;
 }
-.box {
-  max-width: 200px !important;
+.container-vew {
+  align-content: center;
+  max-width: 70%;
+  height: auto;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+  color: green;
+
+}
+.panel-boot {
+  color: black;
+
+}
+.boot {
+  max-width: 70%;
+  margin-right: auto;
+  margin-left: auto;
+  height: auto;
+  padding-right: 15px;
+  padding-left: 15px;
+}
+.inline {
+  display: inline-block;
+}
+.mybutton {
+  max-width: 30%;
+  text-align: left;
 }
