--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -3,5 +3,5 @@
     <title></title>
     <link rel="stylesheet" href="/css/bootcamp.css">
     <link rel="stylesheet" href="/css/style.css">
-    <link href="/css/simple-sidebar.css" rel="stylesheet">
+    <link href="/css/editstud.css" rel="stylesheet" type="text/css">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
