--- a/views/stutest.ejs
+++ b/views/stutest.ejs
@@ -15,18 +15,8 @@
       <div class=" jumbotron row">
              <table class="table table-students">
 
-               <div class="dropdown mybutton"> <% for(i=0 ; i < result_bootcamps.length ; i++){ %>
-                 <button class="btn btn-secondary dropdown-toggle" type="button"
-                 id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  <%= result_bootcamps[i].bootcamp_name %>
-                 </button>
-                 <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-
-                     <a class="dropdown-item" href="/seestuds/stu/<%= result_bootcamps[i].bootcamp_id %>">
-                    <h5 class="drop_btcmp"><%= result_bootcamps[i].bootcamp_name %></h5> <br /> </a> <% } %>
-                    </div>
-                  </div>
-
+              <!-- <%= for (var i=0; i< result_bootcamps.length; i++) { %>
+                  result_bootcamps[i].bootcamp_name  -->
                <tbody>
                 <tr>
                   <th>Name</th>
