--- a/views/stutest.ejs
+++ b/views/stutest.ejs
@@ -11,6 +11,7 @@
 
 
    <div class="container boot">
+     <h2>  HO SH HR IA HAA A A HA HAH A</h2>
 
       <div class=" jumbotron row">
              <table class="table table-students">
