--- a/public/css/bootcamp.css
+++ b/public/css/bootcamp.css
@@ -28,7 +28,7 @@ body {
     background: linear-gradient(45deg, #E74C3C 10%, #514f51 90%);
     height: 100vh
 }
-.container {
+.container_shahriar {
 	max-width:400px;
 	/*width:100%;*/
 	margin:0 auto;
