--- a/views/admin_profile.ejs
+++ b/views/admin_profile.ejs
@@ -9,7 +9,7 @@
     <% include ./partials/header %>
 </header>
 
-    <div class="container">
+    <div class="container_shahriar">
 
             <% for(i=0 ; i < info.length ; i++){ %>
 
