--- a/public/css/editstud.css
+++ b/public/css/editstud.css
@@ -16,3 +16,18 @@
 .box {
   max-width: 200px !important;
 }
+.boot {
+  max-width: 70%;
+  margin-right: auto;
+  margin-left: auto;
+  height: auto;
+  padding-right: 15px;
+  padding-left: 15px;
+}
+.inline {
+  display: inline-block;
+}
+.mybutton {
+  max-width: 30%;
+  text-align: left;
+}
