--- a/views/seestudents.ejs
+++ b/views/seestudents.ejs
@@ -1,10 +1,6 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <title>Edit Students</title>
-    <link href="css/editstud.css" rel="stylesheet" type="text/css">
-    <script type="text/javascript" src="javascript/jq.js"></script>
       <% include ./partials/head %>
   </head>
   <body>
@@ -29,5 +25,9 @@
       </tbody>
     </table>
       </div>
+    </div>
   </body>
+  <footer>
+    <% include ./partials/footer %>
+  </footer>
 </html>
