--- a/views/stutest.ejs
+++ b/views/stutest.ejs
@@ -30,7 +30,7 @@
                     <td><%= data[i].city %></td>
                     <td><%= data[i].phone_num %></td>
                     <td><a href="/seestuds/edit/<%= data[i].stu_id %>">Edit</a></td>
-                    <td><a href="#Irene URL#">View</a></td>
+                    <td><a href="#Irene UR#">View</a></td>
                   <% } %>
                 </tr>
                </tbody>
