--- a/views/live_checkin.ejs
+++ b/views/live_checkin.ejs
@@ -37,9 +37,10 @@
 </header>
 
     <div class="container">
+    <p id="today">Date:</p>
       <section>
   <!--for demo wrap-->
-  <h1 class="liveh1">Fixed Table header</h1>
+  <h1 class="liveh1">Live Check-In</h1>
   <div class="tbl-header">
     <table class="live_table" cellpadding="0" cellspacing="0" border="0">
       <thead>
