--- a/public/css/live_checkin.css
+++ b/public/css/live_checkin.css
@@ -11,6 +11,9 @@ table{
   width:100%;
   table-layout: fixed;
 }
+#today{
+  color: white;
+}
 .tbl-header{
   background-color: rgba(255,255,255,0.3);
  }
