--- a/views/bootcamp.ejs
+++ b/views/bootcamp.ejs
@@ -9,7 +9,7 @@
     <% include ./partials/header %>
 </header>
 
-    <div class="container_shahriar">
+    <div class="container">
         <div class="dropdown">
           <button class="btn btn-warning dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Edit Bootcamps
