--- a/views/edit_bootcamp.ejs
+++ b/views/edit_bootcamp.ejs
@@ -9,7 +9,7 @@
     <% include ./partials/header %>
 </header>
 
-    <div class="container_shahriar">
+    <div class="container">
       <% for(i=0 ; i < data.length ; i++){ %>
       <form method="post" action="/bootcamp/editbtcmp/<%= data[i].bootcamp_id %>" id="contact" class="form">
         <h4>Edit Bootcamp</h4>
