--- a/views/seestudents.ejs
+++ b/views/seestudents.ejs
@@ -7,37 +7,23 @@
    <header>
        <% include ./partials/header %>
    </header>
-   <div class="container-table">
-         <select id='mySelectElement' value='2'>
-           <% for(var i=0; i< data.length; i++) { %>
-            <option value='1'><%= data[i].bootcamp_name %>  </option>  <% } %>
-         </select>
-    <div class="table-place">
-      <div class="table-container">
-             <table class="table table-students">
-               <tbody>
-                <tr>
-                  <th>Name</th>
-                  <th>E-mail</th>
-                  <th>City</th>
-                  <th>Phone</th>
-                  <th>Edit</th>
-                  <th>Reports</th>
-                </tr>
-                <% for(var i=0; i< data.length; i++) { %>
-                <tr>
-                    <td><%= data[i].stu_name %></td>
-                    <td><%= data[i].email %></td>
-                    <td><%= data[i].city %></td>
-                    <td><%= data[i].phone_num %></td>
-                    <td><a href="/seestuds/edit/<%= data[i].stu_id %>">Edit</a></td>
-                    <td><a href="#Irene URL#">View</a></td>
-                  <% } %>
-                </tr>
-               </tbody>
-             </table>
-           </div>
-         </div>
+   <div class="container boot">
+  
+   <div class="jumbotron row">
+    <table class="table table-students">
+      <tbody>
+       <tr>
+         <th> Bootcamp Name: </th>
+         <th> Started At: </th>
+       </tr>
+       <% for(i=0 ; i < result_bootcamps.length ; i++){ var date = result_bootcamps[i].start_date %>
+       <tr>
+           <td> <a style="text-decoration:none" href="/seestuds/stu/<%= result_bootcamps[i].bootcamp_id %>">
+            <span class="panel-boot panel-warning breadcrumb active">  <%= result_bootcamps[i].bootcamp_name %> </span> </a></td>
+           <td><span class="panel-boot breadcrumb-item">    <%= date.toDateString() %></span></td>  <% } %>
+       </tr>
+      </tbody>
+    </table>
       </div>
     </div>
   </body>
