--- a/views/bootcamp.ejs
+++ b/views/bootcamp.ejs
@@ -47,7 +47,7 @@ oninput="setCustomValidity('')"/>
           <div class="form__group">
 
             <input type="file" name="userFile" />
-          <button class="btn">Submit</button>
+          <button class="btn">Add new Bootcamp</button>
       </form>
 
 
