--- a/public/css/live_checkin.css
+++ b/public/css/live_checkin.css
@@ -11,6 +11,13 @@ table{
   width:100%;
   table-layout: fixed;
 }
+.photo{
+  width: 50px;
+  height: 50px;
+  box-shadow: 1px 1px 5px #595959;
+  padding:1px;
+   border:1px solid #021a40;
+}
 .datenums{
   color: #f3f1f1;
 
