--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,7 +27,7 @@
             <img src="https://restart.network/images/logo_restart_nav.png" alt="logo" width="150px" />
         </header>
 
-        <form class="form" method="POST" action="/login">
+        <form class="form" method="POST" action="admin/login">
 
             <div class="form__group">
                 <input type="email" name="email" placeholder="Email" class="form__input" required/>
