--- a/views/live_checkin.ejs
+++ b/views/live_checkin.ejs
@@ -22,12 +22,9 @@
 
 
           <ul class="nav navbar-nav">
-              <li><a href="/bootcamp">Bootcamp</a></li>
-              <li><a href="/students">Students</a></li>
-              <li><a href="/seestuds">View Students</a></li>
-              <li><a href="/records">Report</a></li>
-              <li><a href="/checkIn">Live Check-in</a></li>
-              <li class="logout"><a href="/bootcamp/signout">Log out</a></li>
+              <li><a href="/admin">Log in</a></li>
+              <li><a href="/main">Check in System</a></li>
+              <li><a href="/students">About</a></li>
           </ul>
       </div>
 
@@ -60,7 +57,7 @@
         <tr>
           <td><%= grab[i].stu_name %></td>
           <td><%= date.toLocaleTimeString() %></td>
-          <td><%= grab[i].stu_photo_name %></td>
+          <td><img class="photo" src="/uploads/<%= grab[i].stu_photo_name %>" alt=""></td>
         </tr><% } %>
       </tbody>
     </table>
@@ -72,7 +69,7 @@
 <script>
 setTimeout(function() {
   location.reload();
-}, 5000);
+}, 10000);
 </script>
     <footer>
       <% include ./partials/footer %>
