--- a/public/css/live_checkin.css
+++ b/public/css/live_checkin.css
@@ -11,12 +11,21 @@ table{
   width:100%;
   table-layout: fixed;
 }
+img:hover{
+  filter: none;
+  -webkit-filter: none;
+}
+img{
+  filter: grayscale(1);
+    -webkit-filter: grayscale(1);
+}
 .photo{
+
   width: 50px;
   height: 50px;
   box-shadow: 1px 1px 5px #595959;
   padding:1px;
-   border:1px solid #021a40;
+  border:1px solid #540114;
 }
 .datenums{
   color: #f3f1f1;
@@ -40,16 +49,16 @@ table{
   border: 1px solid rgba(255,255,255,0.3);
 }
 th{
+  text-align: center;
   padding: 20px 15px;
-  text-align: left;
   font-weight: 500;
   font-size: 12px;
   color: #fff;
   text-transform: uppercase;
 }
 td{
+  text-align: center;
   padding: 15px;
-  text-align: left;
   vertical-align:middle;
   font-weight: 300;
   font-size: 15px;
@@ -62,6 +71,7 @@ td{
 
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,500,300,700);
 body{
+
   font-family: $font-family;
   font-size: $font-size;
   background-size: 200% 100% !important;
