--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -16,7 +16,7 @@
             <li><a href="/bootcamp">Bootcamp</a></li>
             <li><a href="/students">Students</a></li>
             <li><a href="/seestuds">View Students</a></li>
-            <li><a href="/records">Report</a></li>
+            <li><a href="/reports">Report</a></li>
             <li><a href="/checkIn">Live Check-in</a></li>
             <li class="logout"><a href="/bootcamp/signout">Log out</a></li>
         </ul>
