--- a/public/css/bootcamp.css
+++ b/public/css/bootcamp.css
@@ -44,10 +44,10 @@ body {
     font-weight:300;
   	font-size: 12px;
   	line-height:30px;
-    background-size: 200% 100% !important;
+    /*background-size: 200% 100% !important;*/
     animation: move 10s ease infinite;
     transform: translate3d(0, 0, 0);
-    background: linear-gradient(45deg, #E74C3C 10%, #514f51 90%);
+
     height: 100vh
 }
 .container {
