--- a/views/rfid.ejs
+++ b/views/rfid.ejs
@@ -12,7 +12,7 @@
     <div class="container_shahriar">
         </div>
         <%- messages('messages', locals) %>
-      <form method="POST" action="/checkIn/rfid" id="contact" class="form">
+      <form method="POST" action="/rfid" id="contact" class="form">
         <h4>RFID Reader</h4>
         <hr />
 
