--- a/views/seestudents.ejs
+++ b/views/seestudents.ejs
@@ -5,27 +5,38 @@
   </head>
   <body>
    <header>
+     <link rel="stylesheet" href="./css/editstud.css">
+      <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
        <% include ./partials/header %>
    </header>
    <div class="container boot">
-  
+
    <div class="jumbotron row">
     <table class="table table-students">
       <tbody>
-       <tr>
-         <th> Bootcamp Name: </th>
-         <th> Started At: </th>
+       <tr >
+         <th class="table-students"> Bootcamp Name: </th>
+         <th> Start Date: </th>
        </tr>
        <% for(i=0 ; i < result_bootcamps.length ; i++){ var date = result_bootcamps[i].start_date %>
        <tr>
            <td> <a style="text-decoration:none" href="/seestuds/stu/<%= result_bootcamps[i].bootcamp_id %>">
-            <span class="panel-boot panel-warning breadcrumb active">  <%= result_bootcamps[i].bootcamp_name %> </span> </a></td>
-           <td><span class="panel-boot breadcrumb-item">    <%= date.toDateString() %></span></td>  <% } %>
+            <span class="link"> <strong> <%= result_bootcamps[i].bootcamp_name %></strong> </span> </a></td>
+           <td><span>    <%= date.toDateString() %></span></td>  <% } %>
        </tr>
       </tbody>
     </table>
       </div>
     </div>
+    <script>
+$("span.link").hover(
+  function() {
+    $( this ).append( $( "<span class='jqspan label label-danger'> View Students </span>" ) ).fadeIn("slow");
+  }, function() {
+    $( this ).find( "span.jqspan:last" ).remove();
+  }
+);
+</script>
   </body>
   <footer>
     <% include ./partials/footer %>
