--- a/views/admin_profile.ejs
+++ b/views/admin_profile.ejs
@@ -14,8 +14,8 @@
             <% for(i=0 ; i < info.length ; i++){ %>
 
         <%- messages('messages', locals) %>
-      <form method="POST" action="/profile/edit_admin/1" id="contact" class="form">
-        <h4>Add New Bootcamp</h4>
+      <form method="POST" action="/admin/edit/1" id="contact" class="form">
+        <h4>Edit Your Profile</h4>
         <hr />
 
         <div class="form__group">
