--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,7 +8,7 @@
 <a class="dropdown navbar-brand dropdown-toggle" data-toggle="dropdown">Welcome <%= user_session %>
 </a>
 <ul class="dropdown-menu">
-<li><a href="/profile/1">Edit your profile</a></li>
+<li><a href="admin/profile/1">Edit your profile</a></li>
 </ul>
 
 
@@ -16,13 +16,9 @@
             <li><a href="/bootcamp">Bootcamp</a></li>
             <li><a href="/students">Students</a></li>
             <li><a href="/seestuds">View Students</a></li>
-<<<<<<< HEAD
             <li><a href="/reports">Report</a></li>
-            <li><a href="/checkIn">Live Check-in</a></li>
-=======
-            <li><a href="/records">Report</a></li>
-            <li><a href="/">Live Check-in</a></li>
->>>>>>> origin/Shahriyar
+            <li><a href="/live2">Live Check-in</a></li>
+
             <li class="logout"><a href="/bootcamp/signout">Log out</a></li>
         </ul>
     </div>
