Irene Page fixed

--- a/views/edit_bootcamp.ejs
+++ b/views/edit_bootcamp.ejs
@@ -34,7 +34,7 @@
           </div>
 <% } %>
 
-          <button type="submit" class="btn_edit">Edit</button><input class="btn_edit" type="button" onclick="location.href='/bootcamp';" value="Cancel" />
+          <button type="submit" class="btn_edit">Edit</button><input class="btn_edit" type="button" onclick="location.href='/bootcamp';" value="Back" />
       </form>
 
 
