--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,11 +13,12 @@
 
 
         <ul class="nav navbar-nav">
-            <li><a href="/bootcamp">Bootcamp</a></li>
-            <li><a href="/students">Students</a></li>
-            <li><a href="/seestuds">View Students</a></li>
-            <li><a href="/reports">Report</a></li>
             <li><a href="/live2">Live Check-in</a></li>
+            <li><a href="/bootcamp">Manage Bootcamps</a></li>
+            <li><a href="/seestuds">Manage Students</a></li>
+            <li><a href="/students">Add Student</a></li>
+            <li><a href="/reports">Reports</a></li>
+
 
             <li class="logout"><a href="/bootcamp/signout">Log out</a></li>
         </ul>
