--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,11 +13,11 @@
 
 
         <ul class="nav navbar-nav">
-            <li><a href="/bootcamp">Bootcamp</a></li>
-            <li><a href="/students">Students</a></li>
-            <li><a href="/seestuds">View Students</a></li>
-            <li><a href="/records">Report</a></li>
             <li><a href="/">Live Check-in</a></li>
+            <li><a href="/bootcamp">Edit Bootcamp</a></li>
+            <li><a href="/seestuds">View Bootcamps</a></li>
+            <li><a href="/students">Add Student</a></li>
+            <li><a href="/records">Reports</a></li>
             <li class="logout"><a href="/bootcamp/signout">Log out</a></li>
         </ul>
     </div>
