--- a/views/edit_student.ejs
+++ b/views/edit_student.ejs
@@ -14,10 +14,9 @@
   <main>
 		<div class="container boot">
 				<div class="jumbotron" align="center">
-					<div class="container-table">
-					<h3>Edit <%=result.stu_name%> Information</h3>
-          <% for (i=0; i< result.length; i++) { %>
-<form name="f1" method="POST" action="../editstud/edit/<%= result[i].stu_id %>" >
+					<div class="container-table"><% for (i=0; i< result.length; i++) { %>
+					<h3>Edit <%=result.stu_name%> Information%></h3>
+<form name="f1" method="POST" action="/seestuds/edit/<%= result[i].stu_id %>" >
 					<table class="table table-hover">
   <tbody>
 <!--  TR -->
@@ -43,7 +42,7 @@
       <td>Nationality</td>
       <td>
 				<select name="stu_nath" >
-      		<option value="">Select nationality</option>
+      		<option>Select nationality</option>
           <%result_country.forEach(function(res){%>
           <option value="<%=res.num_code%>"> <%=res.nationality%> </option>
           <%});%>
@@ -123,14 +122,15 @@
 			<td  align="center">
 
   	 </td>
-		 <td  align="center">
-			 <input type="submit" name="saveme" value="Submit"  class="btn btn-primary">
+		 <td  align="center"><%}%>
+			 <input type="submit" name="updsteme" value="Update"  class="btn btn-primary">
+
 		</td>
     </tr>
 <!--//  TR -->
   </tbody>
 </table>
-<%}%>
+
 </form>
 	</main>
 	</div>
