--- a/views/records.ejs
+++ b/views/records.ejs
@@ -27,7 +27,7 @@
           Name: <%= data[i].stu_name %>
         </div>
 
-  <form method="POST" action="../show" class="form1">
+  <form method="POST" action="/reports/show" class="form1">
           <input type='hidden' name="id" value="<%=id%>" />
         Date from:
           <input type='date' id="1" name="start_date"  required/>
