--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
 </head>
   <body>
 <header>
-  <nav class="navbar navbar-default" role="navigation">
+  <nav class="navbar navbar-inverse bg-inverse" role="navigation">
   <div class="container-fluid">
 
       <div class="navbar-header">
