--- a/views/live_checkin2.ejs
+++ b/views/live_checkin2.ejs
@@ -22,11 +22,11 @@
 
 
           <ul class="nav navbar-nav">
-              <li><a href="/bootcamp">Bootcamp</a></li>
-              <li><a href="/students">Students</a></li>
-              <li><a href="/seestuds">View Students</a></li>
-              <li><a href="/reports">Report</a></li>
-              <li><a href="/live2">Live Check-in</a></li>
+            <li><a href="/live2">Live Check-in</a></li>
+            <li><a href="/bootcamp">Manage Bootcamps</a></li>
+            <li><a href="/seestuds">Manage Students</a></li>
+            <li><a href="/students">Add Student</a></li>
+            <li><a href="/reports">Reports</a></li>
 
               <li class="logout"><a href="/bootcamp/signout">Log out</a></li>
           </ul>
@@ -61,7 +61,7 @@
         <tr>
           <td><%= grab[i].stu_name %></td>
           <td><%= date.toLocaleTimeString() %></td>
-          <td><img class="photo" src="/uploads/<%= grab[i].stu_photo_name %>" alt=""></td>
+          <td><img class="photo" src="/uploads/<%= grab[i].stu_photo_name %>" alt="Student_Photo"></td>
         </tr><% } %>
       </tbody>
     </table>
@@ -73,11 +73,7 @@
 <script>
 setTimeout(function() {
   location.reload();
-<<<<<<< HEAD
 }, 500000);
-=======
-}, 10000);
->>>>>>> origin/Shahriyar
 </script>
     <footer>
       <% include ./partials/footer %>
